--- a/approval_app/approval/templates/base.html
+++ b/approval_app/approval/templates/base.html
@@ -12,7 +12,7 @@
             <h2 class="brand">Approval System</h2>
             <ul class="nav-links">
                 <li><a href="{% url 'process_selection' %}">Upload File</a></li>
-                <li><a href="">Manage Processes</a></li>
+                <li><a href="{% url 'manage_processes' %}">Manage Processes</a></li>
                 <li><a href="">Approval Dashboard</a></li>
                 <li><a href="">Add Approver</a></li>
             </ul>
