--- a/approval_app/approval/templates/process_code_options.html
+++ b/approval_app/approval/templates/process_code_options.html
@@ -1,4 +1,4 @@
-<option value="">Select a Process Code</option>
+<option value="">Choose a Process</option>
 {% for code in process_codes %}
   <option value="{{ code.id }}">{{ code.code_name }}</option>
 {% endfor %}
