Add Add Approver

--- a/approval_app/approval/templates/base.html
+++ b/approval_app/approval/templates/base.html
@@ -13,8 +13,8 @@
             <ul class="nav-links">
                 <li><a href="{% url 'process_selection' %}">Upload File</a></li>
                 <li><a href="{% url 'manage_processes' %}">Manage Processes</a></li>
+                <li><a href="{% url 'add_approver' %}">Add Approver</a></li>
                 <li><a href="">Approval Dashboard</a></li>
-                <li><a href="">Add Approver</a></li>
             </ul>
         </div>
     </nav>
