--- a/approval_app/approval/static/style.css
+++ b/approval_app/approval/static/style.css
@@ -106,6 +106,8 @@ label {
 input[type="text"],
 input[type="file"],
 input[type="number"],
+input[type="email"],
+input[type="password"],
 select,
 textarea {
     width: 100%;
