--- a/approval_app/approval/templates/base.html
+++ b/approval_app/approval/templates/base.html
@@ -12,16 +12,21 @@
             <h2 class="brand">Approval System</h2>
             <ul class="nav-links">
                 <li><a href="{% url 'process_selection' %}">Upload File</a></li>
-                {% if user.is_admin %}
+
+                {% if user.is_admin %} <!--Change to super admin later-->
                 <li><a href="{% url 'manage_processes' %}">Manage Processes</a></li>
                 <li><a href="{% url 'add_approver' %}">Add Approver</a></li>
                 {% endif %}
-                <li><a href="">Approval Dashboard</a></li>
+
+                {% if user.is_admin %}
+                <li><a href="{% url 'approver_dashboard' %}">Approval Dashboard</a></li>
+                {% endif %}
+
                 {% if user.is_authenticated %}
-                <li><a href="{% url 'logout' %}">logout</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
-                <li><a href="{% url 'login' %}">login</a></li>
-                <li><a href="{% url 'signup' %}">signup</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'signup' %}">Signup</a></li>
                 {% endif %}
             </ul>
         </div>
@@ -29,9 +34,9 @@
 
     <hr>
 
-    <div class="content">
-        {% block content %}{% endblock %}
-    </div>
+        <div class="content">
+            {% block content %}{% endblock %}
+        </div>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
         {% if messages %}
